# cassetteflow

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README.md  eq.txt  sdkconfig  sdkconfig.old
components/audio_board/: CMakeLists.txt  board.c  board.h  board_def.h  board_pins_config.h
components/audio_stream/: i2s_stream.c
components/fftw3/: CMakeLists.txt  config.h
components/minimodem/: CMakeLists.txt  databits.h  databits_uic.c  fsk.c  fsk.h  minimodem_config.h  minimodem_dec_init.c  minimodem_dec_init.h  minimodem_decoder.c  minimodem_decoder.h  minimodem_enc_init.c  minimodem_enc_init.h  minimodem_encoder.c  minimodem_encoder.h  simple-tone-generator.c  simple-tone-generator.h  uic_codes.c
main/: CMakeLists.txt  audiodb.c  audiodb.h  bt.c  bt.h  config.h  eq.c  eq.h  filter_line_reader.c  filter_line_reader.h  flacinfo.c  flacinfo.h  http_server.c  http_server.h  internal.h  keys.c  keys.h  led.c  led.h  main.c  main.h  mp3db.c  mp3db.h  mp3info.c  mp3info.h  network.c  network.h  pipeline.c  pipeline.h  pipeline_decode.c  pipeline_decode.h  pipeline_encode.c  pipeline_encode.h  pipeline_output.c  pipeline_output.h  pipeline_passthrough.c  pipeline_passthrough.h  pipeline_playback.c  pipeline_playback.h  play_sdcard_minimodem_control_example.c  (+8 more)
minimodem/: CMakeLists.txt  baudot.h  minimodem_enc_init.h  minimodem_encoder.c  simple-tone-generator.c  simple-tone-generator.h  uic_codes.c  uic_codes.h
tools/: sync_tracks.py
